# Asterea

./: Astraea.cpp  Astraea.h  CMakeLists.txt  README.md  TaylorConstants.h  main.cpp
lib/Quartic/: README.md  quartic.cpp  quartic.h
